[package]
name = "space_invaders"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv = "0.10.1"
riscv-rt = "0.11.0"
pci = { git = "https://github.com/ChaoticOnyx/OnyxBay14.Drivers", package = "pci" }
gpu = { git = "https://github.com/ChaoticOnyx/OnyxBay14.Drivers", package = "gpu" }
rtc = { git = "https://github.com/ChaoticOnyx/OnyxBay14.Drivers", package = "rtc" }
heap = { git = "https://github.com/ChaoticOnyx/OnyxBay14.Drivers", package = "heap" }
hid = { git = "https://github.com/ChaoticOnyx/OnyxBay14.Drivers", package = "hid" }
plic = { git = "https://github.com/ChaoticOnyx/OnyxBay14.Drivers", package = "plic" }
screen = { git = "https://github.com/ChaoticOnyx/OnyxBay14.Drivers", package = "screen" }

[build-dependencies]
image = "0.24.6"

[profile.dev]
lto = true
strip = true
opt-level = "z"

[profile.release]
lto = true
strip = true
opt-level = "z"
